--- a/css/style.scss
+++ b/css/style.scss
@@ -557,6 +557,7 @@ body {
 
     &__post {
         @include mix-flex(flex-start, flex-start);
+        gap: 10px;
 
         &:not(:last-child) {
             margin-bottom: 45px;
@@ -565,23 +566,89 @@ body {
 
     &__icon {
         display: block;
-        margin-right: 20px;
         border-radius: 50%;
     }
 
-    &__text {
+    &__content {
         width: 55%;
         background: #D9D9D9;
         padding: 10px;
-        border-radius: 5px;
+        border-radius: 10px;
     }
 
     &__reservation {
         background: $primary-color;
-
+        margin-left: 0;
+        margin-top: 25px;
     }
 
-    &__content {}
+    &__confirm {
+        @include mix-flex(center, flex-start);
+        margin-top: 30px;
+        opacity: .8;
+    }
+
+    &__confirmText {
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    &__confirmTriangle {
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-right: 10px solid transparent;
+        border-left: 10px solid transparent;
+        border-top: 15px solid #555555;
+        border-bottom: 0;
+    }
+}
+
+#myself {
+    justify-content: end;
+    flex-direction: row-reverse;
+
+    & .communication__content {
+        background: $primary-color;
+    }
+}
+
+//settlement
+.checker {
+    padding-top: 100px;
+
+    &__inner {
+        @include mix-inner(70%);
+    }
+
+    &__text {
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    &__list {
+        @include mix-flex(center, flex-start);
+        width: 100%;
+        gap: 10px;
+
+        &:not(:last-child) {
+            margin-bottom: 10px;
+        }
+    }
+
+    &__container {
+        @include mix-flex();
+    }
+
+    &__img {
+        display: block;
+        width: 45%;
+    }
+
+    &__btn {
+        margin-top: 60px;
+    }
+
 }
 
 //profile~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
