--- a/css/style.css
+++ b/css/style.css
@@ -708,4 +708,30 @@ body {
 .setting__attention {
   color: #FF0000;
 }
+
+.settlement {
+  padding-top: 100px;
+}
+.settlement__inner {
+  width: 90%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.settlement__title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 35px;
+}
+.settlement__card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.settlement__text {
+  width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
