--- a/css/style.scss
+++ b/css/style.scss
@@ -760,3 +760,31 @@ body {
         color: #FF0000;
     }
 }
+
+//settlement~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+.settlement {
+    padding-top: 100px;
+
+    &__inner {
+        @include mix-inner();
+    }
+
+    &__title {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 35px;
+    }
+
+    &__card {
+        @include mix-flex(center, flex-start);
+        gap: 10px;
+        margin-bottom: 20px;
+    }
+
+    &__text {
+        width: 100%;
+    }
+
+    &__img {}
+}
