--- a/js/react-sample-app/src/scss/App.css
+++ b/js/react-sample-app/src/scss/App.css
@@ -60,6 +60,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
 }
+.footer__home {
+  display: block;
+  width: 30px;
+  height: 30px;
+}
 
 .btn {
   display: flex;
@@ -226,22 +231,39 @@ body {
   opacity: 0.8;
 }
 
+.logo {
+  display: block;
+  width: 30px;
+  height: 30px;
+}
+
+.icon {
+  display: block;
+  width: 30px;
+  height: 30px;
+  aspect-ratio: 1/1;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .home {
   padding-top: 60px;
   overflow-x: hidden;
 }
 
-.switching__container {
+.switching {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
-.switching__brrow {
-  background: #0098A9;
-}
-.switching__lend {
-  background: #E0DFDF;
+.switching__btn {
+  display: block;
+  width: 50%;
+  text-align: center;
+  background: #D9D9D9;
+  padding: 10px;
+  border-radius: 15px 15px 0 0;
 }
 
 .tab {
@@ -436,31 +458,16 @@ body {
   margin: 50px 0 100px auto;
 }
 
-.post__inner {
-  width: 90%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  min-height: 100vh;
-  position: relative;
-  text-align: center;
-  top: 40%;
-  transform: translateY(50%);
-}
-.post__container {
+.post {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   margin-top: 30px;
 }
-.post__save {
-  width: 100px;
-  background: #fff;
-  border: 1px solid #000;
-}
-.post__push {
-  width: 100px;
+.post__container {
+  margin-left: 30px;
+  flex: 1;
 }
 
 .comp__inner {
@@ -868,5 +875,9 @@ body {
 
 .attention-close {
   display: none;
+}
+
+.activeTab {
+  background: #0098A9;
 }
 /*# sourceMappingURL=App.css.map */
