--- a/js/react-sample-app/src/scss/App.css
+++ b/js/react-sample-app/src/scss/App.css
@@ -17,6 +17,13 @@ body {
   position: relative;
 }
 
+.home,
+.chat,
+.profile,
+.setting {
+  padding: 100px 0;
+}
+
 .header {
   position: fixed;
   display: block;
@@ -247,7 +254,6 @@ body {
 }
 
 .home {
-  padding-top: 60px;
   overflow-x: hidden;
 }
 
@@ -273,14 +279,18 @@ body {
   border-radius: 15px 15px 0 0;
 }
 
-.brrow {
-  width: 100%;
+.borrow {
+  margin-top: 30px;
 }
-.brrow__inner {
+.borrow__inner {
   width: 90%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+}
+.borrow__end {
+  color: #555555;
+  text-align: center;
 }
 
 .post {
@@ -288,11 +298,9 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-}
-.post:not(:last-child) {
-  margin-bottom: 20px;
   padding-bottom: 10px;
-  border-bottom: 1px solid #ccc;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #d9d9d9;
 }
 .post__img {
   width: 30%;
@@ -321,6 +329,10 @@ body {
   font-weight: bold;
   margin-bottom: 25px;
 }
+.post__container {
+  margin-left: 30px;
+  flex: 1;
+}
 
 .lend {
   width: 100%;
@@ -343,6 +355,24 @@ body {
   color: #0000ee;
   text-align: center;
   margin-bottom: 25px;
+}
+
+.write {
+  margin: 30px 0;
+}
+.write__inner {
+  width: 90%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.write__title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.write__subTitle {
+  margin-bottom: 20px;
 }
 
 .pan {
@@ -456,18 +486,6 @@ body {
 }
 .confirm__btn {
   margin: 50px 0 100px auto;
-}
-
-.post {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  margin-top: 30px;
-}
-.post__container {
-  margin-left: 30px;
-  flex: 1;
 }
 
 .comp__inner {
