--- a/js/react-sample-app/src/scss/App.css
+++ b/js/react-sample-app/src/scss/App.css
@@ -20,7 +20,8 @@ body {
 .home,
 .chat,
 .profile,
-.setting {
+.setting,
+.comms {
   padding: 100px 0;
 }
 
@@ -249,8 +250,21 @@ body {
   width: 30px;
   height: 30px;
   aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+.sIcon {
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+#map {
+  aspect-ratio: 4/3;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 5px solid #fff;
 }
 
 .home {
@@ -280,7 +294,7 @@ body {
 }
 
 .borrow {
-  margin-top: 30px;
+  padding-top: 30px;
 }
 .borrow__inner {
   width: 90%;
@@ -305,6 +319,9 @@ body {
 .post__img {
   width: 30%;
   height: auto;
+  aspect-ratio: 3/4;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .post__info {
   width: 60%;
@@ -591,6 +608,18 @@ body {
   border-left: 10px solid transparent;
   border-top: 15px solid #555555;
   border-bottom: 0;
+}
+
+.comms__inner {
+  width: 90%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.comms__attention {
+  text-align: center;
+  color: #555555;
+  font-weight: bold;
 }
 
 #myself {
