--- a/js/react-sample-app/src/scss/App.scss
+++ b/js/react-sample-app/src/scss/App.scss
@@ -57,8 +57,8 @@ img {
 body {
     max-width: 650px;
     font-size: 16px;
-    margin: 0;
-    // overflow-x: hidden;
+    margin: 0 auto;
+    overflow-x: hidden;
 }
 
 //common~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -75,7 +75,8 @@ body {
 .chat,
 .profile,
 .setting,
-.comms {
+.comms,
+.settleWrite {
     padding: 80px 0;
 }
 
@@ -84,6 +85,7 @@ body {
     position: fixed;
     display: block;
     width: 100%;
+    max-width: 650px;
     height: 50px;
     background: $primary-color;
     z-index: 1000;
@@ -103,6 +105,7 @@ body {
     bottom: 0;
     display: block;
     width: 100%;
+    max-width: 650px;
     height: 50px;
     background: $primary-color;
 
@@ -209,11 +212,13 @@ body {
 .slider {
     position: fixed;
     top: 0;
-    left: 0;
-    transform: translateX(100%);
+    left: 50%;
+    margin: 0 auto;
+    transform: translate(-50%, -100%);
     background: $primary-color;
     min-height: 100vh;
     width: 100%;
+    max-width: 650px;
     transition: .3s ease-in-out;
 
     &__inner {
@@ -319,6 +324,16 @@ body {
 
 //home~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+.info {
+    margin-bottom: 30px;
+
+    &__title {
+        font-size: 18px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+}
+
 .home {
     overflow-x: hidden;
 }
@@ -357,7 +372,7 @@ body {
     }
 
     &__img {
-        margin-bottom: 10px;
+        margin-bottom: 30px;
     }
 }
 
@@ -441,11 +456,19 @@ body {
     &__title {
         font-size: 20px;
         font-weight: bold;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
     }
 
     &__subTitle {
-        margin-bottom: 20px;
+        margin-bottom: 60px;
+    }
+
+    &__container {
+        margin-bottom: 10px;
+    }
+
+    &__label {
+        font-weight: bold;
     }
 }
 
@@ -624,61 +647,6 @@ body {
 }
 
 //communication
-.communication {
-    padding-top: 100px;
-
-    &__inner {
-        @include mix-inner();
-    }
-
-    &__post {
-        @include mix-flex(flex-start, flex-start);
-        gap: 10px;
-
-        &:not(:last-child) {
-            margin-bottom: 45px;
-        }
-    }
-
-    &__icon {
-        display: block;
-        border-radius: 50%;
-    }
-
-    &__content {
-        width: 55%;
-        background: #D9D9D9;
-        padding: 10px;
-        border-radius: 10px;
-    }
-
-    &__reservation {
-        background: $primary-color;
-        margin-left: 0;
-        margin-top: 25px;
-    }
-
-    &__confirm {
-        @include mix-flex(center, flex-start);
-        margin-top: 30px;
-        opacity: .8;
-    }
-
-    &__confirmText {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-
-    &__confirmTriangle {
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-right: 10px solid transparent;
-        border-left: 10px solid transparent;
-        border-top: 15px solid #555555;
-        border-bottom: 0;
-    }
-}
 
 .comms {
     &__inner {
@@ -689,7 +657,34 @@ body {
         text-align: center;
         color: #555555;
         font-weight: bold;
+        margin-bottom: 15px;
     }
+
+    &__explanation {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    &__post {
+        background: #D9D9D9;
+        padding: 15px;
+        border-radius: 8px;
+
+        width: 50%;
+
+        &:not(:last-child) {
+            margin-bottom: 45px;
+        }
+    }
+
+    & .btn {
+        margin-left: 0;
+    }
+}
+
+#commsMe {
+    background: #92D0D7;
+    margin-left: auto;
 }
 
 #myself {
@@ -753,8 +748,19 @@ body {
 
     &__icon {
         display: block;
+        width: 35%;
+        aspect-ratio: 1/1;
+        object-fit: cover;
         border-radius: 50%;
         margin: 0 auto 15px;
+    }
+
+    &__marker {
+        display: block;
+        width: 50px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        margin-left: 10px;
     }
 
     &__nameContent {
@@ -851,9 +857,50 @@ body {
 
 //settlement~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-.settlement {
+.settle {
     padding-top: 100px;
 
+    &__inner {
+        @include mix-inner();
+    }
+
+    &__img {
+        display: block;
+        width: 45%;
+        aspect-ratio: 3/4;
+        object-fit: cover;
+    }
+
+    &__title {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 60px;
+        text-align: center;
+    }
+
+    &__container {
+        @include mix-flex(flex-start, space-between);
+    }
+
+    &__content {
+        width: 45%;
+
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+    }
+
+    &__list {
+        margin-bottom: 15px;
+    }
+
+    &__item:nth-child(1) {
+        font-size: 16px;
+        font-weight: bold;
+    }
+}
+
+.settleWrite {
     &__inner {
         @include mix-inner();
     }
@@ -861,16 +908,22 @@ body {
     &__title {
         font-size: 20px;
         font-weight: bold;
-        margin-bottom: 35px;
+        margin-bottom: 30px;
     }
 
-    &__card {
+    &__subTitle {
+        margin-bottom: 15px;
+        font-weight: bold;
+    }
+
+    &__list {
         @include mix-flex(center, flex-start);
+        margin-bottom: 30px;
         gap: 10px;
-        margin-bottom: 20px;
     }
 
-    &__text {
+    & .form {
+        display: block;
         width: 100%;
     }
 }
@@ -973,15 +1026,31 @@ body {
 }
 
 .features {
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #D9D9D9;
+
     &__container {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 10px;
     }
 
     &__title {
         font-size: 18px;
         font-weight: bold;
         margin-bottom: 10px;
+    }
+
+    &__address {
+        color: $link-color;
+        display: block;
+
+        transition: .3s ease-in;
+
+        &:hover {
+            transform: scale(1.01);
+        }
     }
 
     &__price {
@@ -1002,6 +1071,8 @@ body {
     &__user dd {
         font-size: 18px;
     }
+
+
 }
 
 
@@ -1024,12 +1095,13 @@ body {
 //js~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 .open {
-    transform: translateX(0%);
+    transform: translate(-50%, 0%);
 }
 
 .closed {
-    transform: translateX(100%);
+    transform: translate(-50%, -100%);
 }
+
 
 .attention-open {
     display: block;
